testdata/err/garbage.err.txt
error: invalid token
- testdata/err/garbage.tn:1:1
1 | ¤#"&"d!#%f
  | ^^
